# ooze-rhythm

./: .gitignore  .gitmodules  Cargo.toml  Config.toml  README.md
.cargo/: config.toml
src/: beat.rs  config.rs  input.rs  main.rs  midi.rs  preset.rs  screenshot.rs  shader_pipeline.rs  slime_mould.rs
